syntax = "proto2";

package api;

service ProtectedService {
  rpc Me(ProtectedRequest) returns (ProtectedResponse);
}

message ProtectedRequest {}

message ProtectedResponse {
  required string sub = 1;
  repeated string roles = 2;
  repeated string policies = 3;
}
